# market-analysis

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  README_LLM.md  README_SCRAPER.md  automation_setup.md  competitive_counter_strategies.md  competitive_intelligence_automation.py  competitor_scraper.py  competitors_config.py  config.py  customer_validation_execution_plan.md  dashboard.py  data_analyzer.py  data_combiner.py  detailed_feature_roadmap.md  hot_scraper.py  html_report_generator.py  html_report_generator_v2.py  implementation_summary.md  llm_analyzer.py  main_pipeline.py  main_pipeline_scraper.py  pyproject.toml  reddit_collector.py  reddit_scraper.py  requirements.txt  requirements_automation.txt  requirements_scraper.txt  run_full_analysis.py  setup.py  setup.sh  setup_scraper.py  strategic_synthesis_report.md  streamlit_app.py  streamlit_deployment.md  summary_report_generator.py  tailwind_html_generator.py  text_classifier.py  (+1 more)
data/: combined_new_hot_full.csv  combined_reddit_data_20250825_195729.csv  processed_posts.csv  raw_posts.csv  reddit_notion_hot_20250825_195628.csv  reddit_notion_hot_full_20250825_200305.csv  reddit_notion_new_20250825_203710.csv  reddit_notion_top_20250825_195635.csv  test_scraper_data.csv
reports/: 30_60_90_day_execution_plan.md  ab_testing_framework.md  beta_testing_framework.md  brand_design_strategy.md  cac_growth_modeling_analysis.md  competitive_alert_system.md  competitive_feature_matrix_benchmarking.md  competitive_response_defense_strategy.md  comprehensive_notion_analysis.md  content_calendar_strategy.md  (+27 more)
(+40 files in other folders)
